filtering by year

--- a/src/Components/Filter/Filter.css
+++ b/src/Components/Filter/Filter.css
@@ -1,6 +1,6 @@
 .btn-style{
- color:gray;
- background-color:rgb(143, 233, 143);
+ color:rgb(228, 214, 214);
+ background-color:rgb(127, 225, 127);
  padding: 4px 10px;
  margin:5px 0;
  border:none;
