responsive for mobile device

--- a/src/Components/Filter/Filter.css
+++ b/src/Components/Filter/Filter.css
@@ -13,12 +13,7 @@
   cursor: pointer;
 }
 .single-btn{
- padding-left: 2.2rem;
+ padding-left: .9rem;
 }
 
-@media only screen and (max-width: 400px) {
- .single-btn{
-  padding-left: 6rem;
- }   
-}
  
