--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -7,6 +7,8 @@
 .first-div{
  background-color: #fff;
   margin: 10px;
+  width: 100%;
+
 }
 .second-div{
  width: 100%;
@@ -33,12 +35,14 @@
 
                .first-div{
                  
-                margin-left: 55px;
+                margin-left: 45px;
                  
                }
                .second-div{
                  margin: 0;
-                margin-left: 55px;             
+                margin-left: 47px;             
                }
 }
+
+ 
  
